--- a/templates/header.html
+++ b/templates/header.html
@@ -2,5 +2,6 @@
     <nav>
         <a href="contact.html">Contact</a>
         <a href="posts.html">Posts</a>
+        <a href="index.html">Home</a>
     </nav>
 </header>
