--- a/css/tufte.css
+++ b/css/tufte.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 /* Import ET Book styles
    adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
 
@@ -27,6 +28,19 @@
              font-weight: normal;
              font-style: normal; }
 
+
+@font-face {
+    font-family: "sohne";
+    src: url("../fonts/Sohne/sohne.otf");
+}
+
+@font-face{
+    font-family: "signifier";
+    src: url("../fonts/Sohne/sohne.otf");
+}
+
+
+
 /* Tufte CSS styles */
 html { font-size: 15px; }
 
@@ -34,27 +48,31 @@ body { width: 87.5%;
        margin-left: auto;
        margin-right: auto;
        padding-left: 12.5%;
-       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-       background-color: #fffff8;
-       color: #111;
+       /*font: 18px/1.5 Helvetica;*/
+       font-family: sohne, et-book,Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; 
+       background-color: #000;
+       color: #FFFFF8;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
 
 h1 { font-weight: 400;
+    font-family: signifier;
      margin-top: 4rem;
      margin-bottom: 1.5rem;
      font-size: 3.2rem;
      line-height: 1; }
 
-h2 { font-style: italic;
-     font-weight: 400;
+h2 { font-style: normal;
+    font-family: signifier;
+     font-weight: 600;
      margin-top: 2.1rem;
      margin-bottom: 0;
      font-size: 2.2rem;
      line-height: 1; }
 
-h3 { font-style: italic;
-     font-weight: 400;
+h3 { font-style: normal;
+    font-family: signifier;
+     font-weight: 600;
      font-size: 1.7rem;
      margin-top: 2rem;
      margin-bottom: 0;
@@ -147,13 +165,13 @@ figure.fullwidth figcaption { margin-right: 24%; }
 a:link, a:visited { color: inherit; }
 
 a:link { text-decoration: none;
-         background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
-         background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#333, #333);
+         background: -webkit-linear-gradient(#111, #111), -webkit-linear-gradient(#111, #111), -webkit-linear-gradient(#333, #333);
+         background: linear-gradient(#111, #111), linear-gradient(#111, #111), linear-gradient(#505050, #505050);
          -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
          -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
          background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
          background-repeat: no-repeat, no-repeat, repeat-x;
-         text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+         text-shadow: 0.03em 0 #111, -0.03em 0 #111, 0 0.03em #111, 0 -0.03em #111, 0.06em 0 #111, -0.06em 0 #111, 0.09em 0 #111, -0.09em 0 #111, 0.12em 0 #111, -0.12em 0 #111, 0.15em 0 #111, -0.15em 0 #111;
          background-position: 0% 93%, 100% 93%, 0% 93%; }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) { a:link { background-position-y: 87%, 87%, 87%; } }
