--- a/css/tufte.css
+++ b/css/tufte.css
@@ -162,6 +162,11 @@ figcaption { float: right;
 figure.fullwidth figcaption { margin-right: 24%; }
 
 /* Links: replicate underline that clears descenders */
+a:hover{
+    text-decoration:underline;
+    border-bottom: 0px solid blue;
+}
+
 a:link, a:visited { color: inherit; }
 
 a:link { text-decoration: none;
@@ -181,6 +186,13 @@ a:link::selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #
 
 a:link::-moz-selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
                          background: #b4d5fe; }
+
+
+a:hover{
+    text-decoration:underline;
+    border-bottom: 0px solid blue;
+}
+
 
 /* Sidenotes, margin notes, figures, captions */
 img { max-width: 100%; }
