--- a/css/tufte.css
+++ b/css/tufte.css
@@ -162,13 +162,13 @@ figcaption { float: right;
 figure.fullwidth figcaption { margin-right: 24%; }
 
 /* Links: replicate underline that clears descenders */
-a:hover{
-    text-decoration:underline;
-    border-bottom: 0px solid blue;
-}
 
 a:link, a:visited { color: inherit; }
 
+a:link {
+    text-decoration: none;
+}
+/*
 a:link { text-decoration: none;
          background: -webkit-linear-gradient(#111, #111), -webkit-linear-gradient(#111, #111), -webkit-linear-gradient(#333, #333);
          background: linear-gradient(#111, #111), linear-gradient(#111, #111), linear-gradient(#505050, #505050);
@@ -186,11 +186,30 @@ a:link::selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #
 
 a:link::-moz-selection { text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
                          background: #b4d5fe; }
-
-
+                         */
+/*
 a:hover{
     text-decoration:underline;
     border-bottom: 0px solid blue;
+}*/
+
+a {
+    position: relative;
+}
+
+a::after{
+    content: '';
+    position: absolute;
+    background-color: #FFF;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -2px;
+    transition: all 0.5s ease;
+}
+
+a:hover::after{
+    width: 100%;
 }
 
 
