--- a/css/tufte_pandoc_compat.css
+++ b/css/tufte_pandoc_compat.css
@@ -12,7 +12,11 @@ section.level1, section.level3, section.level4, section.level5, section.level6 {
 ** Font size adjustments.
 ************************/
 
-code { font-size: 1.05rem; }
+code { 
+    font-family: sohne_mono;
+    font-size: 1.25rem; 
+
+}
 span.marginnote code, span.sidenote code { font-size: 0.85rem; }
 
 /*********************************
