--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -19,7 +19,7 @@ body > article {
 header > nav {
     padding: 3rem 3rem 0 0;
     font-size: 1.3rem;
-    font-family: jbmono, signifier;
+    font-family: "Roboto", jbmono, signifier;
 }
 
 @media (max-width: 760px) {
@@ -70,7 +70,7 @@ body > footer hr {
     width: 100%;
     border: 0;
     margin: 0;
-    height: 1px;
+    height: 0px;
     background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
     background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
     background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
