--- a/css/tufte.css
+++ b/css/tufte.css
@@ -58,14 +58,14 @@ body { width: 87.5%;
        margin-right: auto;
        padding-left: 12.5%;
        /*font: 18px/1.5 Helvetica;*/
-       font-family: "Roboto", "Open Sans", serif, "monospace" , jbmono, sohne,et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; 
+       font-family: sohne, "monospace" , jbmono, sohne,et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; 
        background-color: #1c1c1d;
        color: #FFFFF8;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
 
 h1 { font-weight: 400;
-    font-family: "Roboto", jbmono, signifier;
+    font-family: "jbmono", signifier;
     color: #87ceeb;
      margin-top: 4rem;
      margin-bottom: 1.5rem;
@@ -73,7 +73,7 @@ h1 { font-weight: 400;
      line-height: 1; }
 
 h2 { font-style: normal;
-    font-family: "Roboto", jbmono, signifier;
+    font-family: "jbmono", signifier;
      font-weight: 400;
      color: #87ceeb;
      margin-top: 2.1rem;
@@ -82,7 +82,7 @@ h2 { font-style: normal;
      line-height: 1; }
 
 h3 { font-style: normal;
-    font-family: "Roboto", jbmono,signifier;
+    font-family: "jbmono", signifier;
     color: #87ceeb;
      font-weight: 400;
      font-size: 1.7rem;
