--- a/css/tufte.css
+++ b/css/tufte.css
@@ -59,7 +59,7 @@ body { width: 87.5%;
        padding-left: 12.5%;
        /*font: 18px/1.5 Helvetica;*/
        font-family: sohne, "monospace" , jbmono, sohne,et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; 
-       background-color: #1c1c1d;
+       background-color: #000;
        color: #FFFFF8;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
