--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
 margin: 40px auto;
 max-width: 700px;
 line-height: 1.6;
-font: 18px/1.5 Hack, monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+font: 18px/1.5 monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-color: #444;
+color: #111;
 padding: 0 10px
 }
 
