--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ margin: 40px auto;
 max-width: 700px;
 line-height: 1.6;
 font: 18px/1.5 monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-color: #111;
+color: #FFF;
+background: #000;
 padding: 0 10px
 }
 
@@ -13,16 +14,7 @@ h3 {
 line-height: 1.2
 }
 
-@media (prefers-color-scheme: dark) {
-body {
-color: #fff;
-background: #000;
-margin: 40px auto;
-max-width: 700px;
-line-height: 1.6;
-font: 18px/1.5 monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-padding: 0 10px
-}
+
 
 a:link {
 color: #FFED29
@@ -31,4 +23,3 @@ color: #FFED29
 a:visited {
             color:#FFED29 
         }
-}
