--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
 margin: 40px auto;
 max-width: 700px;
 line-height: 1.6;
-font: 18px/1.5 monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-color: #FFF;
-background: #000;
+font: 18px/1.5 Arial, Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+color: #000;
+background: #eee;
 padding: 0 10px
 }
 
@@ -17,9 +17,10 @@ line-height: 1.2
 
 
 a:link {
-color: #FFED29
+color: #006a80
 }
 
 a:visited {
-            color:#FFED29 
+            color: #006a80       
         }
+
