--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,19 @@
 <html lang="en">
 
 {%- include head.html -%}
-
-<body>
+   
+    <body>
     {%- include header.html -%}
+ <!-- for mathjax support -->
+    {% if page.usemathjax %}
+      <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+        TeX: { equationNumbers: { autoNumber: "AMS" } }
+        });
+      </script>
+      <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    {% endif %}
+    
 
     <main class="page-content" aria-label="Content">
         <div class="wrapper">
